maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:41: error: ';' expected but 'if' found.
        } if (y<Hauteur-1 && !aMurNord(x,y+1) && getIndication(x,y+1)==9999) {
          ^